# PKWrapped

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml
client/: Dockerfile  Makefile  README.md  pyproject.toml
client/app/: api_client.py  app.py  box_view.py  client.py  elements.py  models.py  spritesheet.py  utils.py
client/app/pages/: 01_box.py
client/static/: pokesprite-pokemon-gen8.css
server/: Dockerfile  Makefile  README.md  pyproject.toml
server/app/: database.py  main.py  models.py  stats.py
server/app/etl/: species.py
server/scripts/: etl_metadata.py
