[project]
name = "pkw-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab==4.0.5",
    "matplotlib==3.7.2",
    "numpy==1.23.5",
    "pandas==2.0.3",
    "pillow>=11.2.1",
    "plotly==5.18.0",
    "pokebase>=1.4.1",
    "pydantic>=2.12.5",
    "seaborn==0.13.0",
    "streamlit>=1.45.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "tqdm>=4.67.3",
]
